<resources>
    <string name="app_name">GitHub</string>

    <!-- Strings for RepoView   -->
    <string name="tv_repo_watch">Watch</string>
    <string name="tv_repo_star">Star</string>
    <string name="tv_repo_fork">Fork</string>

    <string name="btn_delete">I understand, delete this repository</string>

    <string name="fab">New</string>

    <!-- Errors -->
    <string name="error_repos">Oops! Something went wrong</string>

    <!-- Messages -->
    <string name="message_no_repos">Seems you have no repositories yet</string>
    <string name="message_are_you_sure">Are you absolutely sure?</string>
    <string name="message_warning">Unexpected bad things will happen if you don’t read this!</string>
    <string name="message_explanation">This action <![CDATA[<b>cannot</b>]]> be undone. This will permanently delete the <![CDATA[<b>%s</b>]]> repository, wiki, issues, comments, packages, secrets, workflow runs, and remove all collaborator associations.</string>
    <string name="message_confirm">Please type <![CDATA[<b>%s</b>]]> to confirm.</string>

    <string name="tv_public">Public</string>
    <string name="tv_public_explain">Anyone can see this repository. You choose who can commit.</string>
    <string name="tv_private">Private</string>
    <string name="tv_private_explain">You choose who can see and commit to this repository.</string>
    <string name="tv_init">Initialize this repository with:</string>
    <string name="tv_skip">Skip this step if you’re importing an existing repository.</string>
    <string name="tv_create_new_repo">Create a new repository</string>
    <string name="tv_readme">Add a README file</string>
    <string name="tv_readme_explain">This is where you can write a long description for your project.</string>
    <string name="tv_gitignore">Add .gitignore</string>
    <string name="tv_gitignore_explain">Choose which files not to track from a list of templates.</string>
    <string name="tv_license">Choose a license</string>
    <string name="tv_license_explain">A license tells others what they can and can\'t do with your code.</string>
    <string name="btn_create_repo">Create repository</string>
    <string name="tv_this_will_set">This will set </string>
    <string name="tv_main">main</string>
    <string name="tv_as_def_branch"> as the default branch.</string>
    <string name="allowed_input_characters">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ -_ 0123456789</string>

    <string-array name="spinner_test">
        <item>Android</item>
        <item>Elm</item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>C++</item>
        <item>Html</item>
        <item>CSS</item>
        <item>Unity</item>
        <item>Ada</item>
        <item>Clojure</item>
        <item>Python3</item>
    </string-array>

</resources>