<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_are_you_sure"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="@dimen/spacing_normal_16"
            tools:viewBindingIgnore="true"/>

        <FrameLayout
            android:id="@+id/fl_iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small_8"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/spacing_small_8">

            <ImageView
                android:layout_width="@dimen/icon_size_12"
                android:layout_height="@dimen/icon_size_12"
                android:src="@drawable/ic_cancel" />

        </FrameLayout>

    </RelativeLayout>

    <include layout="@layout/import_horizontal_yellow_line" />

    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_pale"
        android:padding="@dimen/spacing_normal_16"
        android:text="@string/message_warning"
        tools:viewBindingIgnore="true" />

    <include layout="@layout/import_horizontal_yellow_line" />

    <TextView
        android:id="@+id/tv_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing_normal_16"
        android:paddingTop="@dimen/spacing_normal_16"
        android:paddingRight="@dimen/spacing_normal_16"
        tools:text="@string/message_explanation" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:paddingLeft="@dimen/spacing_normal_16"
        android:paddingRight="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_small_8"
        tools:text="@string/message_confirm" />

    <EditText
        android:id="@+id/et_full_repo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_default_14"
        android:lines="1"
        android:textColor="@color/black"
        style="@style/EditTextTheme"
        android:textCursorDrawable="@null"
        android:background="@drawable/border_white_round_8"
        android:inputType="textNoSuggestions|textShortMessage"
        android:imeOptions="actionDone"
        android:paddingTop="@dimen/spacing_small_8"
        android:paddingBottom="@dimen/spacing_small_8"
        android:paddingLeft="@dimen/spacing_normal_16"
        android:paddingRight="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginHorizontal="@dimen/spacing_normal_16"
        tools:text="cepprice/github-repos" />

    <Button
        android:id="@+id/btn_delete"
        style="@style/PaleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:alpha="0.5"
        android:background="@drawable/border_pale_round_8"
        android:minHeight="0dp"
        android:layout_marginHorizontal="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginBottom="@dimen/spacing_normal_16" />
</LinearLayout>
